added custom snippets support

--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -1,6 +1,10 @@
 {
     "diagnostics.globals": [
         "vim",
-        "mappings"
+        "mappings",
+        "s",
+        "i",
+        "t",
+        "sn"
     ]
 }
